--- a/beautyChuSpring/src/main/webapp/view/common/jy_header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/jy_header.html
@@ -7,7 +7,8 @@
 
 <!-- login form css -->
 <link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog.css" />
-<link rel="stylesheet" type="text/css" href="../css/jy/jy_dialog-ken.css" />
+<link rel="stylesheet" type="text/css"
+	href="../css/jy/jy_dialog-ken.css" />
 <script src="../js/resources/jy/modernizr.custom.js"></script>
 
 <!-- Dialog JS -->
@@ -27,33 +28,24 @@
 			<!-- gnb -->
 			<ul class="gnb">
 
-				<li class="m1"><a href="#">
-					<span class="over"></span>
-					<span class="label">SHOP INFO</span></a>
+				<li class="m1"><a href="#"> <span class="over"></span> <span
+						class="label">SHOP INFO</span></a>
 					<div class="sub-menu">
 						<ul>
-							<li class="m1"><a
-								href="#"> 전체 보기</a></li>
-							<li class="m2"><a
-								href="#"> Hot 서울</a></li>
-							<li class="m3"><a
-								href="#">강남/서초</a></li>
-							<li class="m4"><a
-								href="#">압구정/청담</a></li>
+							<li class="m1"><a href="#"> 전체 보기</a></li>
+							<li class="m2"><a href="#"> Hot 서울</a></li>
+							<li class="m3"><a href="#">강남/서초</a></li>
+							<li class="m4"><a href="#">압구정/청담</a></li>
 							<li class="m5"><a href="#">논현/신사</a></li>
 							<!-- <li class="m5"><a href="/svc/notice/web/kr/noticeList.do">공지사항</a></li>-->
-							<li class="m6"><a
-								href="#" target="_blank"
-								title="다른 지점보기">이대/신촌</a></li>
-							<li class="m7"><a href="#"
-								title="갤러리아 면세점">홍대</a></li>
+							<li class="m6"><a href="#" target="_blank" title="다른 지점보기">이대/신촌</a></li>
+							<li class="m7"><a href="#" title="갤러리아 면세점">홍대</a></li>
 						</ul>
 					</div></li>
 				<!-- end of li.m1 -->
 
-				<li class="m2"><a
-					href="#"><span
-						class="over"></span><span class="label">Man</span></a>
+				<li class="m2"><a href="#"><span class="over"></span><span
+						class="label">Man</span></a>
 					<div class="sub-menu">
 						<ul>
 							<li class="m2"><a href="#">Man Cut</a></li>
@@ -62,17 +54,16 @@
 							<li class="m5"><a href="#">Man Care</a></li>
 							<li class="m6"><a href="#">Man ETC</a></li>
 						</ul>
-					
+
 					</div> <!-- Fashion &amp; Style Content -->
 					<div class="good-list-container">
 						<h2 class="title">Fashion &amp; Style Content</h2>
 					</div> <!-- Fashion &amp; Style Content --></li>
-					
+
 				<!-- end of li.m2 -->
 
-				<li class="m3">
-					<a href="yun-stylethumbnail.html"><span class="over"></span><span
-						class="label">woman</span></a>
+				<li class="m3"><a href="yun-stylethumbnail.html"><span
+						class="over"></span><span class="label">woman</span></a>
 					<div class="sub-menu">
 						<ul>
 							<li class="m1"><a href="#">Woman Cut</a></li>
@@ -81,32 +72,30 @@
 							<li class="m3"><a href="#">Woman Care</a></li>
 							<li class="m4"><a href="#">Woman ETC</a></li>
 						</ul>
-					</div>
-				</li>
+					</div></li>
 				<!-- end of li.m3 -->
 
-				<li class="m4">
-					<a href="kh-celebritylist.html"><span class="over"></span><span
-						class="label">Celebrity</span></a>
+				<li class="m4"><a href="kh-celebritylist.html"><span
+						class="over"></span><span class="label">Celebrity</span></a>
 					<div class="sub-menu sub_depth6">
 						<ul>
 							<li class="m1"><a href="#">Celebrity Man</a></li>
 							<li class="m2"><a href="#">Celebrity Woman</a></li>
 						</ul>
-					</div>
-				</li>
+					</div></li>
 				<!-- end of li.m4 -->
 
 			</ul>
 			<!-- gnb -->
-		
-		<ul>
-		<li><form method="get" action="/search" id="search">
-				<input name="q" id="search-bar" type="text" placeholder="Search..." />
-			</form></li>
-		</ul>
-		<!-- search area -->
-		
+
+			<ul>
+				<li><form method="get" action="/search" id="search">
+						<input name="q" id="search-bar" type="text"
+							placeholder="Search..." />
+					</form></li>
+			</ul>
+			<!-- search area -->
+
 		</nav>
 		<!-- #nav -->
 
@@ -118,209 +107,341 @@
 
 			<li class="login"><a data-dialog1="logindialog" title="로그인">login</a></li>
 			<li class="join"><a data-dialog2="joindialog" title="회원가입">Join</a></li>
-			<li class='user toggle-menu js-control'>
-			<a href='#more' class="usermenu" title="사용자 메뉴"> icon + nickname ▼ </a>
-			<ul class="user-list toggle-list">
-  			<li class="jy-mychu"><a href='#'>My Chu</a></li>
-				<li class="jy-logout"><a href='#'>Logout</a></li>  
-				<li class='jy-setting'><a href='#'>Setting</a></li>
-				<li class='jy-mleave'><a href='#'>member leave</a></li>
-			</ul></li>
+			<li class='user toggle-menu js-control'><a href='#more'
+				class="usermenu" title="사용자 메뉴"> icon + nickname ▼ </a>
+				<ul class="user-list toggle-list">
+					<li class="jy-mychu"><a href='#'>My Chu</a></li>
+					<li class="jy-logout"><a href='#'>Logout</a></li>
+					<li class='jy-setting'><a href='#'>Setting</a></li>
+					<li class='jy-mleave'><a href='#'>member leave</a></li>
+				</ul></li>
 
 			<!-- <li class="search"><a href="#" title="검색하기">Search</a></li>  -->
 
 		</ul>
 		<!--sub-menu-->
 
-	
-
-</div>
-<!-- end of div#header -->
 
 
-
-<!-- login form -->
-<div id="logindialog" class="dialog">
-	<div class="dialog__overlay"></div>
-	<div class="dialog__content">
-		<div class="jy-login-header-area">
-			<button class="action jy-btn-login-close" data-dialog-close>
-				<img src="../img/search/btn-close.png">
-			</button>
-		</div>
-		<form class="jy-form-signin" role="form">
-			<div class='jy-page-header'>
-				<h2 class="jy-form-signin-heading">로그인</h2>
-			</div>
-			<div class="jy-login-line">
-				<label for="inputEmail" class="sr-only">Email address</label> <input
-					type="email" id="jy-inputEmail" class="jy-form-control-login"
-					placeholder="beautychu@appchu.com" required autofocus>
-			</div>
-			<div class="jy-login-line">
-				<label for="inputPassword" class="sr-only">Password</label> <input
-					type="password" id="jy-inputPassword" class="jy-form-control-login"
-					placeholder="Password" required>
-			</div>
-			
-			<button class="jy-btn-login" type="submit">로그인</button>
-			
-			<div class="jy-checkbox">
-				<label class="jy-checkbox-line"> <input type="checkbox"
-					value="remember-me"> 아이디 저장
-				</label>
-			</div>
-			
-			
-			<button class="jy-btn-gojoin" type="submit">회원 가입</button>
-		</form>
 	</div>
-</div>
-<!-- login form -->
+	<!-- end of div#header -->
 
 
-<!-- join form -->
-<div id="joindialog" class="dialog">
-	<div class="dialog__overlay"></div>
-	
-	<!-- dialog__content -->
-	<div class="dialog__content">
-		<div class="jy-join-header-area">
-		
-			<!-- page-header -->
-			<div class='jy-page-header'>
-				<h2 class='jy-form-signup-heading'>회원가입</h2>
-			</div>
-			
-			<!-- page-header -->
-			<button class="action jy-btn-join-close" data-dialog-close>
-				<img src="../img/search/btn-close.png">
-			</button>
-		</div>
 
-		<!-- 회원가입 폼 -->
-		<form name='frm' class='form-horizontal jy-join' role='form'
-			method='post'>
-
-			<!-- 이메일 -->
-			<div class='jy-form-group'>
-				<label class='jy-control-label' for='inputEmail1'> 
-				<strong class='jy-email'>이메일</strong>
-				</label>
-				<div class='jy-email-total'>
-					<div class='jy-email-div'>
-						<div class='jy-input-email'>
-							<input name='user_email' class='jy-form-control-join'
-								id='jy-user_email' type='email' maxlength='100'
-								placeholder='appchu@beautychu.com'>
-							<!-- 이메일입력 -->
-						</div>
-						<!-- /.row -->
-						<blockquote class='jy-alarm text-primary'></blockquote>
-						<!-- 이메일체크 메시지 알람 -->
-					</div>
-
-				</div>
-			</div>
-			<!-- 이메일 -->
-
-			<!-- 이메일 중복 체크  -->
-			<div id="jy-email-check" style="height: 10px;">
-			</div>
-			<!-- 이메일 중복 체크  -->
-			
-			<!-- 닉네임 -->
-			<div class='jy-form-group'>
-				<label class='jy-control-label' for='inputNickname1'> <strong
-					class='jy-nick'>닉네임</strong>
-				</label>
-				<div class='jy-input-nickname'>
-					<input name='user_nickname' class='jy-form-control-join'
-						id='jy-user_nickname' type='text' maxlength='50' placeholder=' '>
-				</div>
-			</div>
-			<!-- 닉네임 -->
-
-			<!-- 비밀번호 -->
-			<div class='jy-form-group'>
-				<label class='jy-control-label' for='inputPassword1'> <strong
-					class='jy-pw'>비밀번호</strong>
-				</label>
-				<div class='jy-input-user-pw'>
-					<input name='user_pw' class='jy-form-control-join' id='jy-user_pw'
-						type='password' maxlength='20' placeholder='4~20자로 입력해주세요.'>
-				</div>
-			</div>
-			<!-- 비밀번호 -->
-
-			<!-- 비밀번호확인 -->
-			<div class='jy-form-group'>
-				<label class='jy-control-label' for='inputPassword2'> <strong
-					class='jy-pwr'>비밀번호 확인 </strong>
-				</label>
-				<div class='jy-input-confirm-pw'>
-					<input name='confirm_pw' class='jy-form-control-join' id='jy-confirm_pw'
-						type='password' maxlength='20' placeholder='비밀번호를 재입력 해주세요.'>
-				</div>
-			</div>
-			<!-- 비밀번호확인 -->
-
-
-			<!-- 회원가입 완료 -->
-			<div class='jy-btn-area'>
-				<button class='jy-btn-join-fin' onclick='fn_form_chk();' type='button'>
-					<span class='jy-btn-join'>회원 가입 완료</span>
+	<!-- login form -->
+	<div id="logindialog" class="dialog">
+		<div class="dialog__overlay"></div>
+		<div class="dialog__content">
+			<div class="jy-login-header-area">
+				<button class="action jy-btn-login-close" data-dialog-close>
+					<img src="../img/search/btn-close.png">
 				</button>
-				<div class="clear"></div>
-				<div class='jy-register-alert'>
-					<p class="jy-alert-message">
-						아래의 이메일로 사업자 등록증을 보내주시면<br> 사업자 회원으로 등록해 드립니다.<br>
-						admin@beautychu.com
-					</p>
-				</div>
 			</div>
-			<!-- 회원가입 완료 -->
-			
-		</form>
+			<form class="jy-form-signin" role="form">
+				<div class='jy-page-header'>
+					<h2 class="jy-form-signin-heading">로그인</h2>
+				</div>
+				<div class="jy-login-line">
+					<label for="inputEmail" class="sr-only">Email address</label> <input
+						type="email" id="jy-inputEmail" class="jy-form-control-login"
+						placeholder="beautychu@appchu.com" required autofocus>
+				</div>
+				<div class="jy-login-line">
+					<label for="inputPassword" class="sr-only">Password</label> <input
+						type="password" id="jy-inputPassword"
+						class="jy-form-control-login" placeholder="Password" required>
+				</div>
+
+				<button id="jy-btn-login" class="jy-btn-login" type="button">로그인</button>
+
+				<div class="jy-checkbox">
+					<label class="jy-checkbox-line"> <input type="checkbox"
+						value="remember-me"> 아이디 저장
+					</label>
+				</div>
+
+				<!-- 로그인 체크  -->
+				<div id="jy-login-check" style="height: 10px;"></div>
+				<!-- 로그인 체크  -->
+				<button class="jy-btn-gojoin" type="submit">회원 가입</button>
+			</form>
+		</div>
 	</div>
-</div>
-<!-- join form -->
+	<!-- login form -->
+
+
+	<!-- join form -->
+	<div id="joindialog" class="dialog">
+		<div class="dialog__overlay"></div>
+
+		<!-- dialog__content -->
+		<div class="dialog__content">
+			<div class="jy-join-header-area">
+
+				<!-- page-header -->
+				<div class='jy-page-header'>
+					<h2 class='jy-form-signup-heading'>회원가입</h2>
+				</div>
+
+				<!-- page-header -->
+				<button class="action jy-btn-join-close" data-dialog-close>
+					<img src="../img/search/btn-close.png">
+				</button>
+			</div>
+
+			<!-- 회원가입 폼 -->
+			<form name='frm' class='form-horizontal jy-join' role='form'
+				method='post'>
+
+				<!-- 이메일 -->
+				<div class='jy-form-group'>
+					<label class='jy-control-label' for='inputEmail1'> <strong
+						class='jy-email'>이메일</strong>
+					</label>
+					<div class='jy-email-total'>
+						<div class='jy-email-div'>
+							<div class='jy-input-email'>
+								<input name='user_email' class='jy-form-control-join'
+									id='jy-user_email' type='email' maxlength='100'
+									placeholder='appchu@beautychu.com'>
+								<!-- 이메일입력 -->
+							</div>
+							<!-- /.row -->
+							<blockquote class='jy-alarm text-primary'></blockquote>
+							<!-- 이메일체크 메시지 알람 -->
+						</div>
+
+					</div>
+				</div>
+				<!-- 이메일 -->
+
+				<!-- 이메일 중복 체크  -->
+				<div id="jy-email-check" style="height: 10px;"></div>
+				<!-- 이메일 중복 체크  -->
+
+				<!-- 닉네임 -->
+				<div class='jy-form-group'>
+					<label class='jy-control-label' for='inputNickname1'> <strong
+						class='jy-nick'>닉네임</strong>
+					</label>
+					<div class='jy-input-nickname'>
+						<input name='user_nickname' class='jy-form-control-join'
+							id='jy-user_nickname' type='text' maxlength='50' placeholder=' '>
+					</div>
+				</div>
+				<!-- 닉네임 -->
+
+				<!-- 비밀번호 -->
+				<div class='jy-form-group'>
+					<label class='jy-control-label' for='inputPassword1'> <strong
+						class='jy-pw'>비밀번호</strong>
+					</label>
+					<div class='jy-input-user-pw'>
+						<input name='user_pw' class='jy-form-control-join' id='jy-user_pw'
+							type='password' maxlength='20' placeholder='4~20자로 입력해주세요.'>
+					</div>
+				</div>
+				<!-- 비밀번호 -->
+
+				<!-- 비밀번호확인 -->
+				<div class='jy-form-group'>
+					<label class='jy-control-label' for='inputPassword2'> <strong
+						class='jy-pwr'>비밀번호 확인 </strong>
+					</label>
+					<div class='jy-input-confirm-pw'>
+						<input name='confirm_pw' class='jy-form-control-join'
+							id='jy-confirm_pw' type='password' maxlength='20'
+							placeholder='비밀번호를 재입력 해주세요.'>
+					</div>
+				</div>
+				<!-- 비밀번호확인 -->
+
+				<!-- 비밀번호 일치 체크  -->
+				<div id="jy-pw-check" style="height: 10px;"></div>
+				<!-- 비밀번호 일치 체크  -->
+
+
+				<!-- 회원가입 완료 -->
+				<div class='jy-btn-area'>
+					<button id=jy-btn-join-fin class='jy-btn-join-fin' type='button'>
+						<!-- onclick='fn_form_chk();' -->
+						<span class='jy-btn-join'>회원 가입 완료</span>
+					</button>
+					<div class="clear"></div>
+					<div class='jy-register-alert'>
+						<p class="jy-alert-message">
+							아래의 이메일로 사업자 등록증을 보내주시면<br> 사업자 회원으로 등록해 드립니다.<br>
+							admin@beautychu.com
+						</p>
+					</div>
+				</div>
+				<!-- 회원가입 완료 -->
+
+			</form>
+		</div>
+	</div>
+	<!-- join form -->
 </div>
 
 <script>
-
 	/* 로그인 & 회원가입 dialog slide page */
 	(function() {
 
-		var logindlgtrigger = document.querySelector('[data-dialog1]'), 
-		logindialog = document.getElementById(logindlgtrigger.getAttribute('data-dialog1')), 
-		logindlg = new DialogFx(logindialog);
+		var logindlgtrigger = document.querySelector('[data-dialog1]'), logindialog = document
+				.getElementById(logindlgtrigger.getAttribute('data-dialog1')), logindlg = new DialogFx(
+				logindialog);
 
-		var joindlgtrigger = document.querySelector('[data-dialog2]'), 
-		joindialog = document.getElementById(joindlgtrigger.getAttribute('data-dialog2')), 
-		joindlg = new DialogFx(joindialog);
+		var joindlgtrigger = document.querySelector('[data-dialog2]'), joindialog = document
+				.getElementById(joindlgtrigger.getAttribute('data-dialog2')), joindlg = new DialogFx(
+				joindialog);
 
-		logindlgtrigger.addEventListener('click', logindlg.toggle.bind(logindlg));
+		logindlgtrigger.addEventListener('click', logindlg.toggle
+				.bind(logindlg));
 		joindlgtrigger.addEventListener('click', joindlg.toggle.bind(joindlg));
 
 		/* ajax node 연결 - 이메일 유효성 검사 */
-		
-	  	$("#jy-user_email").keyup(function(data){
-		
- 		 var yunemail=$('#jy-user_email').val();
-		 var yunregex=/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/; 
-		 if(yunregex.test(yunemail)){
-			 $.get("http://192.168.0.143:55555/id", {
-					id : $('#jy-user_email').val()
-				}, function(data) {
-					$('#jy-email-check').html(data.result);
-				})
-		 }else{
-			 $('#jy-email-check').html("잘못된 이메일 형식입니다.");	 
-		 }
-		  
 
-		 });   
+		var joinpass = 0; // 0이면 통과x  1이면 통과
+		var passwordpass = 0;
+
+		$("#jy-user_email")
+				.keyup(
+						function(data) {
+
+							var yunemail = $('#jy-user_email').val();
+							var yunregex = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/;
+							if (yunregex.test(yunemail)) {
+								$.get("http://192.168.0.146:55555/id", {
+									id : $('#jy-user_email').val()
+								}, function(data) {
+									if (data.result === 'yes') {
+										$('#jy-email-check').html(
+												'사용가능한 아이디 입니다.');
+										joinpass = 1;
+									} else if (data.result === 'no') {
+										$('#jy-email-check').html(
+												'중복된 아이디가 있습니다.');
+										joinpass = 0;
+									}
+								})
+							} else {
+								$('#jy-email-check').html("잘못된 이메일 형식입니다.");
+								joinpass = 0;
+
+							}
+						});
+
+		/* 패스워드 일치 검사  */
+
+		function checkpassword() {
+			var password1 = $('#jy-user_pw').val();
+			var password2 = $('#jy-confirm_pw').val();
+
+			if (password1 === null || password2 === null) {
+				$('#jy-pw-check').html("비밀번호를 입력해주세요.");
+				passwordpass = 0;
+			} else if (password1 === password2) {
+				$('#jy-pw-check').html("패스워드가 일치 합니다.^^");
+				passwordpass = 1;
+			} else {
+				$('#jy-pw-check').html("패스워드가 일치하지 않습니다.T.T");
+				passwordpass = 0;
+			}
+		}
+
+		$("#jy-confirm_pw").keyup(function(data) {
+			checkpassword();
+		});
+
+		$("#jy-user_pw").keyup(function(data) {
+			checkpassword();
+		});
+
+		/* -------------------  */
+
+		/* 입력폼 빈칸 검사  */
+
+		$('#jy-btn-join-fin').click(function() {
+			if (passwordpass === 0) {
+				$('#jy-pw-check').html("패스워드를 동일하게 입력해 주세요.");
+
+			}
+			/* 
+			else if(jy-user_nickname===null||jy-user_nickname===null||jy-confirm_pw===null||jy-user_pw===null){
+				$('#jy-pw-check').html("필수 입력 사항을 모두 입력해 주세요.");
+			}
+			 */
+			else if (joinpass === 0) {
+				$('#jy-pw-check').html("올바른 아이디를 입력해 주세요.");
+			} else {
+
+				$.ajax({
+					type : 'post',
+					dataType : "json",
+					url : '../json/auth/join.do',
+					data : {
+						email : $('#jy-user_email').val(),
+						name : $('#jy-user_nickname').val(),
+						password : $('#jy-confirm_pw').val()
+					},
+					success : function(data) {
+						console.log(data.status);
+						console.log(data.loginUser);
+						alert("가입이 완료되었습니다.\n로그인 해주세요.");
+						location.href = 'jy_main.html';
+
+					},
+					error : function() {
+						console.log('회원가입 ajax 실패');
+					}
+
+				});
+
+			}
+
+		})
+
+		/* -------------------  */
+
+		/* 로그인 자바스크립트  */
+
+ 		$('#jy-btn-login').click(function() {
+			
+			var email=$('#jy-inputEmail').val();
+			var password=$('#jy-inputPassword').val();
+	
+			if(email===''){
+				$('#jy-login-check').html('이메일을 입력 해주세요.');
+			}else if(password===''){
+				$('#jy-login-check').html('비밀번호를 입력 해주세요.');
+			}else{
+				
+		 		$.ajax({
+				type : 'post',
+				dataType : "json",
+				url : '../json/auth/login.do',
+				data : {
+					'email' : email,
+					'password' : password
+				},
+				success : function(data) {
+					if(data.loginUser){
+ 					alert(data.loginUser.name+"님 로그인 되었습니다.");
+					location.href = 'jy_main.html'; 
+					}else{
+						$('#jy-login-check').html('아이디 혹은 비밀번호가 맞지 않습니다.');
+
+					}
+				},
+				error : function() {
+					console.log('로그인 ajax 실패');
+				}
+
+			});
+			}
+
+		}) 
+		/* -------------------  */
 
 	})();
 </script>
