login & join css modify -- jy 0106

--- a/beautyChuSpring/src/main/webapp/view/common/jy_header.html
+++ b/beautyChuSpring/src/main/webapp/view/common/jy_header.html
@@ -163,7 +163,8 @@
 				<!-- 로그인 체크  -->
 				<div id="jy-login-check" style="height: 10px;"></div>
 				<!-- 로그인 체크  -->
-				<button class="jy-btn-gojoin" type="submit">회원 가입</button>
+				
+				<button class="jy-btn-gojoin" type="button">회원 가입</button>
 			</form>
 		</div>
 	</div>
@@ -216,7 +217,7 @@
 				<!-- 이메일 -->
 
 				<!-- 이메일 중복 체크  -->
-				<div id="jy-email-check" style="height: 10px;"></div>
+				<div id="jy-email-check" style="height: 20px;"></div>
 				<!-- 이메일 중복 체크  -->
 
 				<!-- 닉네임 -->
