--- a/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-shopinfo.html
@@ -429,9 +429,8 @@ body {
 	<div id="wrap-chu" class="wrap-chu">
 
 		<div class="yun-container">
-
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (1).png">
+				<img class="yun-boximage" src="../images/shop/shop1.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -439,12 +438,59 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/shop/shop3.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/shop/shop2.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/shop/shop4.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-gradation"></div>
+			</div> 
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/shop/shop5.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
  			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (2).png">
+				<img class="yun-boximage" src="../images/shop/shop6.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -452,12 +498,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (3).png">
+				<img class="yun-boximage" src="../images/shop/shop7.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -465,12 +510,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (4).png">
+				<img class="yun-boximage" src="../images/shop/shop8.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -478,14 +522,13 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 
 
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (5).png">
+				<img class="yun-boximage" src="../images/shop/shop9.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -493,12 +536,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (6).png">
+				<img class="yun-boximage" src="../images/shop/shop10.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -506,12 +548,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (7).png">
+				<img class="yun-boximage" src="../images/shop/shop11.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -519,12 +560,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (8).png">
+				<img class="yun-boximage" src="../images/shop/shop12.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -532,13 +572,12 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (9).png">
+				<img class="yun-boximage" src="../images/shop/shop1.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -546,12 +585,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (10).png">
+				<img class="yun-boximage" src="../images/shop/shop2.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -559,12 +597,11 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (11).png">
+				<img class="yun-boximage" src="../images/shop/shop3.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -572,62 +609,10 @@ body {
 					<div class="kh-detail">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (12).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (13).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (14).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (15).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div> 
+
 		</div>
 	</div>
 
@@ -786,17 +771,10 @@ body {
 				);
 		});
 		
-		/** 기현아 사랑해... 나는 언제나 너만 바라보고 있어~    -조게이*/
 		$('div').on("click",".get-coupon",function(){
 			event.stopPropagation();
 			alert("쿠폰이 발급되었습니다!");
 		});
-		
-		$('div').on("click",".kh-shopmap",function(){
-			event.stopPropagation();
-			/* $('#yun-shopphotolist').load('../images/shop/shopmap1.png'); */
-			});
-
 		
 	</script>
 	
