--- a/beautyChuSpring/src/main/webapp/view/kh-styleman.html
+++ b/beautyChuSpring/src/main/webapp/view/kh-styleman.html
@@ -429,9 +429,60 @@ body {
 	<div id="wrap-chu" class="wrap-chu">
 
 		<div class="yun-container">
-
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (1).png">
+				<img class="yun-boximage" src="../images/main/man4.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/main/man3.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/main/man2.jpeg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/main/man1.jpg">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div> 
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/main/man (1).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -444,7 +495,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
  			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (2).png">
+				<img class="yun-boximage" src="../images/main/man (2).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -457,7 +508,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (3).png">
+				<img class="yun-boximage" src="../images/main/man (3).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -470,61 +521,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (4).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-
-
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (5).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (6).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (7).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (8).png">
+				<img class="yun-boximage" src="../images/main/man (4).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -537,8 +534,9 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 
+
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (9).png">
+				<img class="yun-boximage" src="../images/main/man (5).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -551,7 +549,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (10).png">
+				<img class="yun-boximage" src="../images/main/man (6).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -564,7 +562,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (11).png">
+				<img class="yun-boximage" src="../images/main/man (7).png">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -577,7 +575,21 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (12).png">
+				<img class="yun-boximage" src="../images/main/man (8).png">
+					<div class="kh-basic">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+					</div>
+					<div class="kh-detail">
+						<h2>러블리 펌</h2>
+						<div class="starrr"></div>
+						<p>♥mychu 추가</p>
+					</div>
+					<div class="kh-gradation"></div>
+			</div>
+
+			<div class="yun-box">
+				<img class="yun-boximage" src="../images/main/man7.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -590,7 +602,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (13).png">
+				<img class="yun-boximage" src="../images/main/man6.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -603,7 +615,7 @@ body {
 					<div class="kh-gradation"></div>
 			</div>
 			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (14).png">
+				<img class="yun-boximage" src="../images/main/man5.jpg">
 					<div class="kh-basic">
 						<h2>러블리 펌</h2>
 						<div class="starrr"></div>
@@ -615,19 +627,7 @@ body {
 					</div>
 					<div class="kh-gradation"></div>
 			</div>
-			<div class="yun-box">
-				<img class="yun-boximage" src="../images/main/woman (15).png">
-					<div class="kh-basic">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-					</div>
-					<div class="kh-detail">
-						<h2>러블리 펌</h2>
-						<div class="starrr"></div>
-						<p>♥mychu 추가</p>
-					</div>
-					<div class="kh-gradation"></div>
-			</div> 
+
 		</div>
 	</div>
 
@@ -786,17 +786,10 @@ body {
 				);
 		});
 		
-		/** 기현아 사랑해... 나는 언제나 너만 바라보고 있어~    -조게이*/
 		$('div').on("click",".get-coupon",function(){
 			event.stopPropagation();
 			alert("쿠폰이 발급되었습니다!");
 		});
-		
-		$('div').on("click",".kh-shopmap",function(){
-			event.stopPropagation();
-			/* $('#yun-shopphotolist').load('../images/shop/shopmap1.png'); */
-			});
-
 		
 	</script>
 	
