--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -114,6 +114,7 @@
 
 		<div class=buttondiv>
 			<div class="ui button yun-shoppricelist">Price List</div>
+			<div class="ui button kh-shopmap">지도보기</div>
 			<div class="ui button get-coupon">Get Coupon</div>
 		</div>
 
