--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shoppricelist.html
@@ -68,41 +68,63 @@
 	<div id='yun-shopstylelist'>
 		<div id=yun-shopstyle1 class="yun-shopstyle">
 			<img class=yun-shopstyleimage src="../images/style-list/s1.png">
-			<div class="kh-smallbasic" style="border: 1px red solid;"><p>style name</p></div>
-			<div class="kh-smalldetail" style="border: 1px red solid;"><div><p>style name</p><p>price list</p></div><div class="starrr"></div></div>
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle2 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s2.png">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle3 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle4 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle5 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s6.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle7 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s1.png">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle8 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s8.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s2.png">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s3.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s4.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		<div id=yun-shopstyle6 class=yun-shopstyle>
 			<img class=yun-shopstyleimage src="../images/style-list/s5.jpg">
+			<div class="kh-smallbasic" ><p>러블리 펌</p></div>
+			<div class="kh-smalldetail"><div class="kh-smalldetailinfo"><p>러블리 펌</p><p>20,000</p></div><div class="starrr"></div></div>
 		</div>
 		
 		
